--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "jsx-static-scripts",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "tsc -w"
   },
   "repository": {
     "type": "git",
@@ -14,6 +16,23 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jsx-static/jsx-static-scripts/issues"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.2",
+    "@types/memory-fs": "^0.3.2",
+    "@types/sockjs": "^0.3.31",
+    "@types/sockjs-client": "^1.1.1",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.2.0",
+    "typescript": "^3.7.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "jsx-static": "../jsx-static-core",
+    "memory-fs": "^0.5.0",
+    "open": "^7.0.0",
+    "sockjs": "^0.3.19",
+    "sockjs-client": "^1.4.0"
   },
   "homepage": "https://github.com/jsx-static/jsx-static-scripts#readme"
 }
