--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsx-static": "../jsx-static-core",
     "memory-fs": "^0.5.0",
     "open": "^7.0.0",
+    "portfinder": "^1.0.25",
     "sockjs": "^0.3.19",
     "sockjs-client": "^1.4.0"
   },
