--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "jsx-static": "../jsx-static-core",
+    "memfs": "^3.0.3",
     "memory-fs": "^0.5.0",
     "open": "^7.0.0",
     "portfinder": "^1.0.25",
