--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "strict": false,
     "esModuleInterop": true
   },
-  "include": [ "src", "tests", "lib/index.js" ],
+  "include": [ "src", "scripts", "lib/index.js", "index.ts" ],
   "exclude": [ "node_modules" ]
 }
